# mempalace-rpg

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: memory-design.md  pi-integration.md  taverndb-import.md
examples/dest-poet/: auto-commit.ts  gm-memory-rules.md  mcp.json  memo_setting.json  run-rpg-mcp.sh
examples/templates/: gm-memory-rules.template.md  integration-checklist.md  memo_setting.template.json
mempalace_rpg/: __init__.py  adapter.py  budget.py  cli.py  kernel.py  maintenance.py  mcp_server.py  models.py  settings.py  tavern_importer.py
tests/: test_rpg_memory_cli.py  test_rpg_memory_kernel.py  test_rpg_memory_maintenance.py  test_rpg_memory_mcp.py  test_rpg_memory_settings.py  test_rpg_memory_tavern_import.py
