[project]
name = "mempalace-rpg"
version = "0.1.0"
description = "RPG-focused narrative memory kernel and MCP server adapted from MemPalace."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "mempalace-rpg contributors" }]
keywords = ["rpg", "memory", "mcp", "npc", "narrative", "mempalace", "sillytavern"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Role-Playing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mempalace>=3.3.5",
  "chromadb>=1.5.4,<2",
  "pyyaml>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/TohmaN233/mempalace-rpg"
Repository = "https://github.com/TohmaN233/mempalace-rpg"
Upstream-MemPalace = "https://github.com/MemPalace/mempalace"

[project.scripts]
mempalace-rpg = "mempalace_rpg.cli:main"
mempalace-rpg-mcp = "mempalace_rpg.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff==0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mempalace_rpg"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
